syntax = "proto3";

package com.salesforce.servicelibs;

option java_package = "com.wgdetective.reactive_grpc_registry";
option java_outer_classname = "RegistryProto";

import "google/protobuf/empty.proto";

service Registry {
    rpc Register (RegisterRequest) returns (RegisterResponse) {
    }
    rpc notifyAboutSuccessfulRegistration (RegisterRequest) returns (google.protobuf.Empty) {
    }
}

message RegisterRequest {
    string name = 1;
    string server = 2;
}

message RegisterResponse {
    int32 port = 1;
    string server = 2;
}

service Processor {
    rpc Process (ProcessorMessage) returns (ProcessorMessage) {
    }

    rpc ProcessStream (stream ProcessorMessage) returns (stream ProcessorMessage) {
    }
}

message ProcessorMessage {
    string messageId = 1;
    string messageBody = 2;
}